# rocket-rust

./: Cargo.toml  README.md  helpers.txt
client/: README.md  angular.json  package-lock.json  package.json
client/src/: styles.scss
client/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
client/src/http_services/: login.http.service.ts
server/: Cargo.toml  Rocket.toml  helpers.txt
server/src/: form_example.rs  index.rs  main.rs
server/src/auth/: login.rs
server/src/database/: mod.rs
server/src/error_handlers/: handlers.rs
server/src/gaurds/: authorization.rs
server/src/helpers/: jwt_helper.rs  mod.rs
server/src/state/: mod.rs  pg_state.rs  test_state.rs
server/src/users/: get_users.rs  mod.rs
src/: form_example.rs  index.rs  json_example.rs  main.rs
src/auth/: login.rs
src/database/: postgres_sql.rs
src/error_handlers/: handlers.rs
src/helpers/: jwt_helper.rs  mod.rs
src/state/: mod.rs  pg_state.rs
